--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,19 @@ DATABASE_URL=postgresql+asyncpg://gateway:gateway@localhost:5432/gateway
 # Redis (matches docker-compose.yml defaults)
 REDIS_URL=redis://localhost:6379/0
 
-# LLM — get your key from https://console.anthropic.com
-ANTHROPIC_API_KEY=sk-ant-...
+# LLM — provider selection
+# Option A: Groq (free tier, recommended)
+LLM_PROVIDER=openai_compat
+LLM_BASE_URL=https://api.groq.com/openai/v1
+LLM_API_KEY=gsk_...           # get from https://console.groq.com
+# Option B: Ollama (local, fully free)
+# LLM_PROVIDER=openai_compat
+# LLM_BASE_URL=http://localhost:11434/v1
+# LLM_API_KEY=ollama
+# LLM_MODEL=llama3.1:8b
+# Option C: Anthropic (paid)
+# LLM_PROVIDER=anthropic
+# ANTHROPIC_API_KEY=sk-ant-...
 
 # Security — generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
 ADMIN_API_KEY=change-me
