--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pydantic-settings>=2.6.0",
     # LLM (direct SDK - no LangChain)
     "anthropic>=0.39.0",
+    "openai>=1.50.0",
     # Database
     "sqlalchemy[asyncio]>=2.0.36",
     "asyncpg>=0.30.0",
